hydroflow/tests/compile-fail/surface_flow_props_cumul_warn_none.stderr
error: `lattice_reduce` should have exactly 1 generic type arguments, actually has 0.
  --> tests/compile-fail/surface_flow_props_cumul_warn_none.rs:10:33
   |
10 |             -> lattice_reduce::<'static>()
   |                                 ^^^^^^^

error: warning test
  --> tests/compile-fail/surface_flow_props_cumul_warn_none.rs:15:5
   |
15 |     compile_error!("warning test");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `SetUnionHashSet`, `SetUnionSingletonSet`, `SetUnion`
 --> tests/compile-fail/surface_flow_props_cumul_warn_none.rs:1:38
  |
1 | use hydroflow::lattices::set_union::{SetUnionHashSet, SetUnionSingletonSet, SetUnion};
  |                                      ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `hydroflow::lattices::collections::SingletonSet`
 --> tests/compile-fail/surface_flow_props_cumul_warn_none.rs:2:5
  |
2 | use hydroflow::lattices::collections::SingletonSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
